# pipeline-leak-detection

./: CMakeLists.txt  README.md
apps/pipeline_detection/: CMakeLists.txt  ipc_message.h  m4_constants.h  m7_constants.h  main.cc  main_m4.cc
apps/pipeline_detection/web/: grab_frames.py
models/: pipeline_model_int8.tflite  pipeline_model_int8_edgetpu.tflite
